--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,4 +4,8 @@
     <string name="speed_unit_kilometers_per_hour">км/ч</string>
     <string name="speed_unit_meters_per_second">м/c</string>
     <string name="speed_unit_miles_per_hour">миля/ч</string>
+    <string name="speed_unit_title">Скорость</string>
+    <string name="pitch_unit_degree">°</string>
+    <string name="pitch_unit_percent">%</string>
+    <string name="preference_pitch_title">Наклон</string>
 </resources>
