--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,42 +1,56 @@
 <resources>
     <string name="app_name">Vel</string>
-    <string name="speed_unit_kilometers_per_hour">km/h</string>
-    <string name="speed_unit_meters_per_second">m/s</string>
-    <string name="speed_unit_miles_per_hour">mph</string>
-    <string-array name="speed_units">
-        <item>@string/speed_unit_kilometers_per_hour</item>
-        <item>@string/speed_unit_meters_per_second</item>
-        <item>@string/speed_unit_miles_per_hour</item>
-    </string-array>
-    <string name="speed_unit_kilometers_per_hour_id" translatable="false">kmph</string>
-    <string name="speed_unit_meters_per_second_id" translatable="false">mps</string>
-    <string name="speed_unit_miles_per_hour_id" translatable="false">milesph</string>
-    <string-array name="speed_units_ids">
-        <item>@string/speed_unit_kilometers_per_hour_id</item>
-        <item>@string/speed_unit_meters_per_second_id</item>
-        <item>@string/speed_unit_miles_per_hour_id</item>
-    </string-array>
-    <string name="pitch_unit_degree">°</string>
-    <string name="pitch_unit_percent">%</string>
 
-    <string name="speed_unit_title">Speed unit</string>
 
-    <string name="preference_key_speed_unit" translatable="false">speed_unit</string>
-    <string name="preference_speed_default" translatable="false">@string/speed_unit_kilometers_per_hour_id</string>
+    <string name="computer_speed_kmph">km/h</string>
+    <string name="computer_speed_mps">m/s</string>
+    <string name="computer_speed_miph">mph</string>
+
+
+    <string name="preference_speed_key" translatable="false">speed_unit</string>
+    <string name="preference_speed_summary">%s</string>
+    <string name="preference_speed_title">Speed</string>
+
+    <string name="preference_speed_value_kmph" translatable="false">kmph</string>
+    <string name="preference_speed_value_mps" translatable="false">mps</string>
+    <string name="preference_speed_value_miph" translatable="false">miph</string>
+    <string-array name="preference_speed_values">
+        <item>@string/preference_speed_value_kmph</item>
+        <item>@string/preference_speed_value_mps</item>
+        <item>@string/preference_speed_value_miph</item>
+    </string-array>
+    <string name="preference_speed_default" translatable="false">@string/preference_speed_value_kmph</string>
+
+    <string name="preference_speed_entry_kmph">km/h</string>
+    <string name="preference_speed_entry_mps">m/s</string>
+    <string name="preference_speed_entry_miph">mph</string>
+    <string-array name="preference_speed_entries">
+        <item>@string/preference_speed_entry_kmph</item>
+        <item>@string/preference_speed_entry_mps</item>
+        <item>@string/preference_speed_entry_miph</item>
+    </string-array>
+
 
     <string name="preference_pitch_key" translatable="false">pitch_unit</string>
+    <string name="preference_pitch_summary">%s</string>
+    <string name="preference_pitch_title">Pitch</string>
+
     <string name="preference_pitch_value_degree" translatable="false">degree</string>
     <string name="preference_pitch_value_percent" translatable="false">percent</string>
-    <string name="preference_pitch_default" translatable="false">@string/preference_pitch_value_degree</string>
-    <string-array name="preference_pitch_entities">
-        <item>@string/pitch_unit_degree</item>
-        <item>@string/pitch_unit_percent</item>
-    </string-array>
     <string-array name="preference_pitch_values">
         <item>@string/preference_pitch_value_degree</item>
         <item>@string/preference_pitch_value_percent</item>
     </string-array>
-    <string name="preference_pitch_summary">%s</string>
-    <string name="preference_pitch_title">Pitch</string>
+    <string name="preference_pitch_default" translatable="false">@string/preference_pitch_value_degree</string>
+
+    <string name="preference_pitch_entry_degree">°</string>
+    <string name="preference_pitch_entry_percent">%</string>
+    <string name="computer_angel_state_ascent">Ascend</string>
+    <string name="computer_angel_state_descend">Descend</string>
+    <string name="computer_error_need_permissions">Для работы приложения необходимы разрешения</string>
+    <string-array name="preference_pitch_entities">
+        <item>@string/preference_pitch_entry_degree</item>
+        <item>@string/preference_pitch_entry_percent</item>
+    </string-array>
 
 </resources>
