--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Vel</string>
+    <string name="app_name">VEL</string>
 
 
     <string name="computer_speed_kmph">km/h</string>
@@ -48,6 +48,10 @@
     <string name="computer_angel_state_ascent">Ascend</string>
     <string name="computer_angel_state_descend">Descend</string>
     <string name="computer_error_need_permissions">Для работы приложения необходимы разрешения</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_about">About</string>
+    <string name="activity_settings">Settings</string>
+    <string name="activity_about">About</string>
     <string-array name="preference_pitch_entities">
         <item>@string/preference_pitch_entry_degree</item>
         <item>@string/preference_pitch_entry_percent</item>
