--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="menu_about">About</string>
     <string name="activity_settings">Settings</string>
     <string name="activity_about">About</string>
+    <string name="about_text_1">VEL</string>
     <string-array name="preference_pitch_entities">
         <item>@string/preference_pitch_entry_degree</item>
         <item>@string/preference_pitch_entry_percent</item>
