--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">VEL</string>
 
+    <string name="menu_settings">Settings</string>
+    <string name="menu_about">About</string>
+    <string name="menu_reset_speed">Speed reset</string>
 
     <string name="computer_speed_kmph">km/h</string>
     <string name="computer_speed_mps">m/s</string>
@@ -48,8 +51,7 @@
     <string name="computer_angel_state_ascent">Ascend</string>
     <string name="computer_angel_state_descend">Descend</string>
     <string name="computer_error_need_permissions">Для работы приложения необходимы разрешения</string>
-    <string name="menu_settings">Settings</string>
-    <string name="menu_about">About</string>
+
     <string name="activity_settings">Settings</string>
     <string name="activity_about">About</string>
     <string name="about_text_1">VEL</string>
